# linkace-classifer

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api_server.py  classification_service.py  config.py  config.sample.json  demo_classifier.py  docker-compose.yml  linkace_api.py  linkace_classifier.py  linkace_fetcher.py  linkace_fetcher_simple.py  main.py  ollama_client.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_classifier.py  utils.py
.github/workflows/: test.yml
docs/: api.md
examples/: Dockerfile  basic_usage.sh  docker-compose.yml
scripts/legacy/: linkace_fetcher.py
src/linkace_classifier/: __init__.py
src/linkace_classifier/api/: __init__.py  ollama.py
src/linkace_classifier/cli/: __init__.py  main.py  server.py  server_main.py
src/linkace_classifier/core/: __init__.py  classifier.py  config.py
src/linkace_classifier/http/: __init__.py  server.py
src/linkace_classifier/services/: __init__.py  classification_service.py
src/linkace_classifier/validation/: __init__.py  url_validator.py
tests/: __init__.py  test_core.py
